# DoNotSleep

./: .gitignore  CMakeLists.txt  readme.md
cmake/: platform.h.in
example/: conf
example/systemd/: do-not-sleep.service
include/do_not_sleep/: block_info.h  config.h  ds.h  hms.h  util.h
src/: block_info.cc  config.cc  ds.cc  hms.cc  main.cc  util.cc
